[gd_scene load_steps=8 format=3 uid="uid://cmdbwbdi2vliw"]

[ext_resource type="Texture2D" uid="uid://cu7oqs2qpwuh8" path="res://assets/levels/lvl1-bg.png" id="1_7ar2g"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_x2fyk"]
[ext_resource type="PackedScene" uid="uid://el82tnnwldvs" path="res://player.tscn" id="2_jy8k1"]
[ext_resource type="AudioStream" uid="uid://jnmp6fljth6" path="res://assets/bgm/level1_music.wav" id="3_alxes"]
[ext_resource type="PackedScene" uid="uid://cgyuoe0u64pb" path="res://mob.tscn" id="3_u61vv"]
[ext_resource type="PackedScene" uid="uid://yqm8blndf0i3" path="res://assets/terrain/blocks.tscn" id="4_iikw1"]
[ext_resource type="AudioStream" uid="uid://4vugu1e6u1fo" path="res://assets/sfx/bobo_takes_damage.wav" id="6_3y3bd"]

[node name="Main" type="Node"]
script = ExtResource("1_x2fyk")

[node name="Level1" type="Node" parent="."]

[node name="Level1Map" type="Sprite2D" parent="Level1"]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_7ar2g")
metadata/_edit_lock_ = true

[node name="Bgm" type="AudioStreamPlayer" parent="Level1/Level1Map"]
stream = ExtResource("3_alxes")
volume_db = -6.558
autoplay = true

[node name="Mob2" parent="Level1" instance=ExtResource("3_u61vv")]
position = Vector2(840, 272)

[node name="Mob" parent="Level1" instance=ExtResource("3_u61vv")]
position = Vector2(600, 536)

[node name="Blocks" parent="Level1" instance=ExtResource("4_iikw1")]
position = Vector2(296, 192)
rotation = 0.598648

[node name="Walls" type="StaticBody2D" parent="Level1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level1/Walls"]
polygon = PackedVector2Array(1072, 72, 72, 72, 80, 576, 0, 648, 0, 0, 1152, 0, 1152, 648, 8, 648, 80, 576, 1072, 584)

[node name="Player" parent="." instance=ExtResource("2_jy8k1")]
position = Vector2(152, 320)
motion_mode = 1

[node name="BoboDamagePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3y3bd")
volume_db = 9.584

[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
